just 20mai. chapter4 kouhan miseiri

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -1,4 +1,4 @@
-\section{テキストマイニングソフト　KH Coder}
+\section{テキストマイニング}
 
 
 
@@ -34,16 +34,16 @@ KH Coderのデメリットとして、
 %　自己組織化マップ単体の問題点としては、クラスターごとの描画色を自分で選べないこと、作成に1分半〜3分時間がかかることが挙げられる。
 
 
-\section{折れ線グラフを用いた可視化}
+\section{折れ線グラフを用いた会話の可視化}
 
 
 %%% しかし，これらの文献では渦と熱輸送との関係を可視化した後，対話的かつ連続的に次の分析を行うことのできるビジュアル分析システムの開発は行われていない．
 
 %%% そこで本研究では先に述べた「物理量の関係が見られる」，「アニメーション表示可能」「自由な視点移動が可能」をシステム要件として設定し，システム開発を行った．
 
-原田ら
+原田ら\cite{voistep}は、マイクの音圧から話者の喋り始めから喋り終わりまでを可視化し、話者ごとの発話量を棒グラフで、発話の重なりを折れ線グラフで可視化したが、カウンセリングにおいてカウンセラーからどのようなクライエントの話題を引き出せたかを可視化するにはクライエントの発言情報とカウンセラーの発言情報の両方をコンパクトに1つのグラフにまとめる方が良いと考える。またカウンセリング書き起こしテキストデータにおいては発話の重なりが分からない。
 
-庄ら\cite{shou}はWebカウンセリングシステムにおいて、折れ線グラフを用いて患者の話題をした。しかし、ビギナーカウンセラーの指導という観点ではビギナーカウンセラーからの発言内容を患者の発言内容と同時に可視化しなければならない。
+庄ら\cite{shou}は、Webカウンセリングシステムにおいて、折れ線グラフを用いて患者の話題をした。しかし、ビギナーカウンセラーの指導という観点ではビギナーカウンセラーからの発言内容を患者の発言内容と同時に可視化しなければならない。
 
 
 Ericら\cite{taskdriven}は、トピックモデリングによって分けたトピックの時間分布を上下の非対称積み重ね折れ線グラフによって可視化した。パターンを調査することに興味があるユーザーにとって、異なるイベントか時点が2つのモデルで違ってハイライトされるかどうかについて見ることが、重要である場合がある。
