--- a/chapter3.tex
+++ b/chapter3.tex
@@ -1,25 +1,18 @@
 本章では、システム開発にあたり必要となるヨガセラピーの基礎事項について説明する。
 
-心療内科では、心身症やストレスからくる身体症状が取り扱われている。
+心理療法で、単一ですべてに
+通じる学派はない。最大の学派は認知行動療法と言われているが、今回提案システムの入力データとして取り扱うヨーガ療法ではアドラー心理学が取り入れられている。アドラー心理学は認知行動
+療法の先駆け的存在として存在しているとされる。行っていることは認知の修正で、同じようなアプローチがとられている。
 
-心理学の学派の一つに、アドラー心理学がある。アドラー心理学は、オーストリアの精神科医であるアルフレッド・アドラー (A.Adler)が創始し、その後継者たちが発展させた心理学の理論、思想と治療技法の体系である\cite{ad}。17世紀にルネ・デカルトが端を発して以来、1879年にヴィルヘルム・ヴントが世界初の心理学実験室を創設したことで哲学的ルーツから切り離された。ジョン・B・ワトソンが「人間の行動――学習されたか否かを問わず、人間の行動や発話の総体――をその主題とする、自然科学の一部門」と述べて以来、アメリカで行動主義が心理学の有力手法となった一方で、実験的証拠よりも観察と症例に基礎を置いたジグムント・フロイトの考えがヨーロッパを中心に広がっていった。フロイトの考えに初めは賛成していたカール・ユングとアルフレート・アドラーは、後にフロイトの考えに異を唱えた。カール・ユングが唱えたのは、人間誰しも、個人的経験には一切基づいていないあるはっきりと分離された無意識の部分、すなわち「集合的無意識」が存在し、「集合的無意識」は神話や象徴として世代を超えて代々受け継がてきた「元型（アーキタイプ）」から成り立っているということであった。
 
-一方、アドラーが初めて示唆したのは、個人の心理は現時点における意識的諸力にも影響されるが、社会的領域や環境の影響も同様に見逃せないということであった。
-現在、世界保健機関（WHO）憲章前文において「健康とは、病気でないとか、弱っていないということではなく、肉体的にも、精神的にも、そして社会的にも、すべてが
-満たされた状態にあることをいいます。（日本WHO協会訳）」と書いてある通り、WHOは健康を肉体的・精神的・社会的という3つの側面からとらえている。一方、アドラーは「人生のすべての問題は、3つの主要な課題に分類することが出来る。すなわち、交友の課題、仕事の課題、愛の課題であると唱えた
-。\cite{ad2}
-アドラー心理学では、ライフタスクについて、来談者にとっての親疎の関係から、仕事のタスク（Work Task）：永続しない人間関係、交友のタスク（Friendship Task）：永続するが、運命をともにしない人間関係、愛のタスク（Love or Family Task）：永続し、運命をともにする人間関係の3つに区別している。
+アドラー心理学は、オーストリアの精神科医であるアルフレッド・アドラー (A.Adler)が創始し、その後継者たちが発展させた心理学の理論、思想と治療技法の体系である\cite{ad}。17世紀にルネ・デカルトが端を発して以来、1879年にヴィルヘルム・ヴントが世界初の心理学実験室を創設したことで哲学的ルーツから切り離された。ジョン・B・ワトソンが「人間の行動――学習されたか否かを問わず、人間の行動や発話の総体――をその主題とする、自然科学の一部門」と述べて以来、アメリカで行動主義が心理学の有力手法となった一方で、実験的証拠よりも観察と症例に基礎を置いたジグムント・フロイトの考えがヨーロッパを中心に広がっていった。フロイトの考えに初めは賛成していたカール・ユングとアルフレート・アドラーは、後にフロイトの考えに異を唱えた。%カール・ユングが唱えたのは、人間誰しも、個人的経験には一切基づいていないあるはっきりと分離された無意識の部分、すなわち「集合的無意識」が存在し、「集合的無意識」は神話や象徴として世代を超えて代々受け継がてきた「元型（アーキタイプ）」から成り立っているということであった。
 
-%
+%一方、アドラーが初めて示唆したのは、個人の心理は現時点における意識的諸力にも影響されるが、社会的領域や環境の影響も同様に見逃せないということであった。
 
-アドラー心理学は、多くの学派の中の一つである。心理療法で、単一ですべてに
-通じる学派はない。世間では、「嫌われる勇気」が大ベストセラーになっ
-たおかげで、昨年から急に有名となってきましたが、マイナーな学派であった。ヨー
-ガ療法についても同様である。
 
-最大の学派としては、認知行動療法と言われている。アドラー心理学はこの認知行動
-療法の先駆け的存在として存在している。行っていることは認知の修正で、同
-じようなアプローチがとられている。
+
+
+%世間では、「嫌われる勇気」が大ベストセラーになったおかげで、昨年から急に有名となってきましたが、マイナーな学派であった。ヨーガ療法についても同様である。
 
 
 ヴントの心理学は実験心理学で、臨床心理学とは常に平行線を長年たどってき
@@ -33,11 +26,26 @@
 から認知療法が発展してきているので、認知療法の先駆けとしてのアド
 ラー心理学があるということにされている。
 
+
+
+
+
+現在、世界保健機関（WHO）憲章前文において「健康とは、病気でないとか、弱っていないということではなく、肉体的にも、精神的にも、そして社会的にも、すべてが
+満たされた状態にあることをいいます。（日本WHO協会訳）」と書いてある通り、WHOは健康を肉体的・精神的・社会的という3つの側面からとらえている。一方、アドラーは「人生のすべての問題は、3つの主要な課題に分類することが出来る。すなわち、交友の課題、仕事の課題、愛の課題であると唱えた。\cite{ad2}以上からアドラー心理学では、ライフタスクについて、来談者にとっての親疎の関係から、仕事のタスク（Work Task）：永続しない人間関係、交友のタスク（Friendship Task）：永続するが、運命をともにしない人間関係、愛のタスク（Love or Family Task）：永続し、運命をともにする人間関係の3つに区別している。臨床上、人間の問題についてこのように恣意的に3つに分類することは、極めて有効であるとされている。
+
 %
 
-人間の問題について、このように恣意的に3つに分類することは、臨床上極めて有効で、アドラー心理学独自のことである。
 
-個人心理学(Individual Psychology)というのが正式名称であるが、個人心理学というと、個人を細かく分析したり個人のみに焦点を合わせるように誤解されやすいので、日本では、この名称はあまり使われていない。
+
+
+
+
+
+%
+
+
+
+
 
 %理論的な特徴として、
 %\begin{itemize}
@@ -65,26 +73,26 @@
 
 %アドラー心理学は、社会精神医学・自我心理学・人間学的心理学などの現代の心理学諸潮流の理論的先駆けであるといわれている。（以上、日本アドラー心理学会Webページより）
 
-アドラー心理学に基づいた治療、または、カウンセリングでは、アドラー心理学の理論に基づいて、来談者の共同体感覚を育成する目的で、様々な技法が用いられる。そのような治療中、または、カウンセリング中に、治療者、または、カウンセラーが、常に、意識しているのは、来談者のライフスタイルについてである。
-アドラー心理学では、人間の問題は、すべて対人関係上の問題であると考える。したがって、アドラー心理学の治療、または、カウンセリングにおいては、来談者が抱えている問題は、対人関係上の問題であり、来談者が自らの使える力をうまく工夫すれば解決できるライフタスクであると考えている。
+%アドラー心理学に基づいた治療、または、カウンセリングでは、アドラー心理学の理論に基づいて、来談者の共同体感覚を育成する目的で、様々な技法が用いられる。そのような治療中、または、カウンセリング中に、治療者、または、カウンセラーが、常に、意識しているのは、来談者のライフスタイルについてである。
+%アドラー心理学では、人間の問題は、すべて対人関係上の問題であると考える。したがって、アドラー心理学の治療、または、カウンセリングにおいては、来談者が抱えている問題は、対人関係上の問題であり、来談者が自らの使える力をうまく工夫すれば解決できるライフタスクであると考えている。
 
 
 
-臨床心理士資格取得者数は年を経るごとに増加傾向にあるが、ビギナーのカウンセラーは、上記のような「対人関係上の問題」すなわち「愛のタスク」・「仕事のタスク」・「交友のタスク」を、質問に対する回答としてクライエントから引き出すのに苦戦しているという問題がある。
+%臨床心理士資格取得者数は年を経るごとに増加傾向にあるが、ビギナーのカウンセラーは、上記のような「対人関係上の問題」すなわち「愛のタスク」・「仕事のタスク」・「交友のタスク」を、質問に対する回答としてクライエントから引き出すのに苦戦しているという問題がある。
 
-そこで、ベテランのカウンセラーがビギナーのカウンセラーに指導する機会が設けられている。たとえば今回書き起こしテキストデータを使用した「心療内科における摂食障害専門ヨーガ療法グループ」事例検討会では、ビギナーのカウンセラーに対してカウンセリングに関するアドバイスがなされている。
-
-
-そこで、本研究では、タイムライン形式の時間軸に沿った可視化によって、クライアントとセラピストの会話を可視化し、セラピストの発した質問によって会話の流れがどのように変化するのかを明らかにするWebシステムを開発した。
+%そこで、ベテランのカウンセラーがビギナーのカウンセラーに指導する機会が設けられている。たとえば今回書き起こしテキストデータを使用した「心療内科における摂食障害専門ヨーガ療法グループ」事例検討会では、ビギナーのカウンセラーに対してカウンセリングに関するアドバイスがなされている。
 
 
-カウンセラーの質問内容については、大きく2種類に分けられている。YesまたはNoで答える質問、ないし短い言葉だけで答えられるような質問は「閉じられた質問」ないし「閉ざされた質問」と呼ばれている。これに対し、患者が5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」で答えるような質問は「開かれた質問」と呼ばれている。患者が何に問題意識を感じているかをカウンセリングで引き出すには、カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている。しかしビギナーのカウンセラーは「閉じられた質問」の割合が多く、患者が何に問題意識を感じているかをカウンセリングでうまく引き出せないケースが比較的多いとされている。
 
-クライアントの会話としては、内容がどの課題領域（仕事、交友、愛、セルフタスク、スピリチュアル）に属するのか、セラピストの質問としては、内容がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である。
 
-クライエントからの提出した話題が、どの領域に関するものか、カウンセリングの中でその領域がどのように変わっていくかを分析していくと、そのカウンセリングプロセスがより明確になると考えられる。タイムラインで見ると、最初にクライエントの関心がどこにあったのか、それに対してカウンセラーからの発話で異なった領域に話題が展開した、というような分析も可能になると考えられる。
-クライエントの関心に関心を向けるというのがカウンセリングの基本ですので、このようにカウンセラーの関心でクライエントを誘導してしまうことはよろしくありませんので、そのためのチェックが可能になるものと考える。
 
-もうひとつの課題として、ビギナーのカウンセラーは閉じられた質問を多く用いる傾向にあるので、ビギナーのカウンセラーを開かれた質問が自由に使えるようになる必要がある。これをチェックできることが求められる。
+%%カウンセラーの質問内容については、大きく2種類に分けられている。YesまたはNoで答える質問、ないし短い言葉だけで答えられるような質問は「閉じられた質問」ないし「閉ざされた質問」と呼ばれている。これに対し、患者が5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」で答えるような質問は「開かれた質問」と呼ばれている。患者が何に問題意識を感じているかをカウンセリングで引き出すには、カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている。しかしビギナーのカウンセラーは「閉じられた質問」の割合が多く、患者が何に問題意識を感じているかをカウンセリングでうまく引き出せないケースが比較的多いとされている。
 
-以上のことをもとに、次章では本論文の提案システムのプロトタイプの開発、およびそのプロトタイプに対して専門家すなわちカウンセラーからいただいたレビューをもとにした、提案システムに対する要件の抽出のについて説明する。
+%クライアントの会話としては、内容がどの課題領域（仕事、交友、愛、セルフタスク、スピリチュアル）に属するのか、セラピストの質問としては、内容がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である。
+
+%クライエントからの提出した話題が、どの領域に関するものか、カウンセリングの中でその領域がどのように変わっていくかを分析していくと、そのカウンセリングプロセスがより明確になると考えられる。タイムラインで見ると、最初にクライエントの関心がどこにあったのか、それに対してカウンセラーからの発話で異なった領域に話題が展開した、というような分析も可能になると考えられる。
+%クライエントの関心に関心を向けるというのがカウンセリングの基本ですので、このようにカウンセラーの関心でクライエントを誘導してしまうことはよろしくありませんので、そのためのチェックが可能になるものと考える。
+
+%もうひとつの課題として、ビギナーのカウンセラーは閉じられた質問を多く用いる傾向にあるので、ビギナーのカウンセラーを開かれた質問が自由に使えるようになる必要がある。これをチェックできることが求められる。
+
+以上のことをもとに、本研究では、タイムライン形式の時間軸に沿った可視化によって、クライアントとセラピストの会話を可視化し、セラピストの発した質問によって会話の流れがどのように変化するのかを明らかにするWebシステムを開発した。次章では本論文の提案システムのプロトタイプの開発、およびそのプロトタイプに対して専門家すなわちカウンセラーからいただいたレビューをもとにした、提案システムに対する要件の抽出のについて説明する。
