--- a/chapter4.tex
+++ b/chapter4.tex
@@ -49,7 +49,6 @@
 
 \section{─є░╞е╖е╣е╞ерд╬е╫еэе╚е┐еде╫│л╚п}
 
-\subsection{╝ъ╦б}
 
 
 бб
@@ -82,7 +81,7 @@ Ericдщ\cite{taskdriven}д╧бве╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 └╤д▀╜┼д═└▐дь└■е░еще╒д╦╜┼д╩д├д╞дддыбд╗ч┐зд╩ддд╖╟╗дде░еьб╝┐зд╬╜─╦└д╧бдележеєе╗ещб╝д╬╝┴╠ф╞т═╞д╬╖┴┬╓дЄ╝ид╣бе╗ч┐зд╧5W1Hб╓ддд─б╫б╓д╔д│д╟б╫б╓├пдмб╫б╓▓┐дЄб╫б╓д╔д╬дшджд╦б╫б╓д╔джд╖д┐б╫д╩д╔д╟╠фдядьдыдшджд╩б╓│лдлдьд┐╝┴╠фб╫бд╟╗дде░еьб╝┐зд╧Yes/Noд╟┼·дидщдьдыбддвдыддд╧░ь╕└д└д▒д╟┤╩├▒┼·дидщдьдыдшджд╩б╓╩─д╕дщдьд┐╝┴╠фб╫дЄ╔╜╕╜д╖д╞дддыбе┬ш1╛╧д╟╜╥д┘д┐─╠дъбд┤╡╝╘дм▓┐д╦╠ф┬ъ░╒╝▒дЄ┤╢д╕д╞дддыдлдЄележеєе╗еъеєе░д╟░·дн╜╨д╣д╦д╧бдележеєе╗ещб╝д╧б╓╩─д╕дщдьд┐╝┴╠фб╫дшдъдтб╓│лдлдьд┐╝┴╠фб╫дЄд╖д┐д█дждмдшддд╚д╡дьд╞дддыбе
 %ббд│д╬е╖е╣е╞ерд╦дкддд╞бв
 
-\subsection{╖ы▓╠}
+%\subsection{╖ы▓╠}
 
 бб
 ╠╧╡╝е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:system1mogi2}бд2014╟п11╖ю╕б╞д▓ё ┤╡╝╘Aт╘┴█╕хд╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:system1a0911go}бд2015╟п11╖ю╕б╞д▓ё ┤╡╝╘Cд╬е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:system1_1002}д╦╝ид╣бе
@@ -122,29 +121,29 @@ Ericдщ\cite{taskdriven}д╧бве╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 бб
 бб
 
-\subsection{╣═╗б}
-епещедеиеєе╚длдщд╬╩╓┼·д└д▒д╟д╩дпбвележеєе╗ещб╝д╬╝┴╠ф╢ш╩мд▒дтеще╕еке▄е┐еєд╦дшд├д╞╝ъ╞░д╟╣╘дидыдшджд╦╜д└╡д╖д┐ддбед▐д┐бвд╔д╬╗■┤╓╝┤║┬╔╕дмд╔д╬╚п╕└дЄ╗╪д╖╝ид╣дл╠└╡нд╖д╩ддд╚╣═╗бд╖дмд┐ддд╬д╟бде▐еже╣екб╝е╨б╝д╦дшд├д╞╚п╕└╞т═╞дм╔╜╝ид╡дьды╗┼┴╚д▀дЄ║юдъд┐ддбг
+%\subsection{╣═╗б}
+%епещедеиеєе╚длдщд╬╩╓┼·д└д▒д╟д╩дпбвележеєе╗ещб╝д╬╝┴╠ф╢ш╩мд▒дтеще╕еке▄е┐еєд╦дшд├д╞╝ъ╞░д╟╣╘дидыдшджд╦╜д└╡д╖д┐ддбед▐д┐бвд╔д╬╗■┤╓╝┤║┬╔╕дмд╔д╬╚п╕└дЄ╗╪д╖╝ид╣дл╠└╡нд╖д╩ддд╚╣═╗бд╖дмд┐ддд╬д╟бде▐еже╣екб╝е╨б╝д╦дшд├д╞╚п╕└╞т═╞дм╔╜╝ид╡дьды╗┼┴╚д▀дЄ║юдъд┐ддбг
 
-╕╢╩╕длдщбде╗еще╘е╣е╚длдщ┤╡╝╘д╪д╬╝┴╠ф╗Ў╣рд╬╩м╬рд╬╗╪╔╕д╚д╖д╞бд┤╡╝╘д╬╚п╕└дЄджд╩дмд╖д╞┤╡╝╘╝л┐╚дт╡дд┼ддд╞ддд╩длд├д┐д│д╚дЄ╟з├╬д╡д╗дыд╬дм┬ч╗Ўд╟двдыд╬д╟бдд╜дьд╛дьд╬╚п╕└╬╠д╬▓─╗ы▓╜д╬╝┬┴їдЄ└╣дъ╣■дрд┘днд╟двдыд╚╣═дидщдьдыбе
-
-
+%╕╢╩╕длдщбде╗еще╘е╣е╚длдщ┤╡╝╘д╪д╬╝┴╠ф╗Ў╣рд╬╩м╬рд╬╗╪╔╕д╚д╖д╞бд┤╡╝╘д╬╚п╕└дЄджд╩дмд╖д╞┤╡╝╘╝л┐╚дт╡дд┼ддд╞ддд╩длд├д┐д│д╚дЄ╟з├╬д╡д╗дыд╬дм┬ч╗Ўд╟двдыд╬д╟бдд╜дьд╛дьд╬╚п╕└╬╠д╬▓─╗ы▓╜д╬╝┬┴їдЄ└╣дъ╣■дрд┘днд╟двдыд╚╣═дидщдьдыбе
 
 
 
-\subsubsection{д╔д│дмд╔д╬╚п╕└дЄ╔╜д╖д╞дддыдлдядлдщд╩дд}
+
+
+%\subsubsection{д╔д│дмд╔д╬╚п╕└дЄ╔╜д╖д╞дддыдлдядлдщд╩дд}
 
 
 
-\subsubsection{едеєе┐ещепе╞еге╓└ндмд╩дд}
-╔┴▓ш╕хд╦еще╕еке▄е┐еєдЄ╩╤дид╞дт╚┐▒■дмд╩ддбг╕╜╛їд╟д╧д╜д╬╛ьд╟е┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бд1▓є1▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞дддыбее╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыд│д╚дм╡сдсдщдьд┐бе
+%\subsubsection{едеєе┐ещепе╞еге╓└ндмд╩дд}
+%╔┴▓ш╕хд╦еще╕еке▄е┐еєдЄ╩╤дид╞дт╚┐▒■дмд╩ддбг╕╜╛їд╟д╧д╜д╬╛ьд╟е┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бд1▓є1▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞дддыбее╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыд│д╚дм╡сдсдщдьд┐бе
 
-\subsubsection{б╓д╜д╬┬╛б╫}
-б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбв┴ъд┼д┴дф└д┤╓╧├дЄб╓д╜д╬┬╛б╫дЄ└▀д▒дыд┘днд╚╣═дидщдьдыбг─є░╞е╖е╣е╞ер1д╦дкддд╞д╧бвб╓д╩д╝б╫б╓▓┐б╫д╩д╔д╬5W1HдЄ┐╓дпдшджд╩╡┐╠ф╗ыдЄ┤▐др╚п╕└дЄб╓│лдлдьд┐╝┴╠фб╫д╚д╖д╞─ъ╡┴д╖бвд╜дь░╩│░дЄб╓╩─д╕дщдьд┐╝┴╠фб╫д╚─ъ╡┴д╖д╞ддд┐д╬д╟бв─є░╞е╖е╣е╞ер1д╦дкд▒дыб╓╩─д╕дщдьд┐╝┴╠фб╫дЄд╡дщд╦бв░╩╣▀д╬е╖е╣е╞ерд╦дкддд╞б╓╩─д╕дщдьд┐╝┴╠фб╫д╚б╓д╜д╬┬╛б╫д╦дяд▒ды╔м═╫дмдвдыд╚╣═дидщдьдыбг
+%\subsubsection{б╓д╜д╬┬╛б╫}
+%б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбв┴ъд┼д┴дф└д┤╓╧├дЄб╓д╜д╬┬╛б╫дЄ└▀д▒дыд┘днд╚╣═дидщдьдыбг─є░╞е╖е╣е╞ер1д╦дкддд╞д╧бвб╓д╩д╝б╫б╓▓┐б╫д╩д╔д╬5W1HдЄ┐╓дпдшджд╩╡┐╠ф╗ыдЄ┤▐др╚п╕└дЄб╓│лдлдьд┐╝┴╠фб╫д╚д╖д╞─ъ╡┴д╖бвд╜дь░╩│░дЄб╓╩─д╕дщдьд┐╝┴╠фб╫д╚─ъ╡┴д╖д╞ддд┐д╬д╟бв─є░╞е╖е╣е╞ер1д╦дкд▒дыб╓╩─д╕дщдьд┐╝┴╠фб╫дЄд╡дщд╦бв░╩╣▀д╬е╖е╣е╞ерд╦дкддд╞б╓╩─д╕дщдьд┐╝┴╠фб╫д╚б╓д╜д╬┬╛б╫д╦дяд▒ды╔м═╫дмдвдыд╚╣═дидщдьдыбг
 
 
-\subsubsection{еще╕еке▄е┐еє╔╜╝и╗■┤╓}
+%\subsubsection{еще╕еке▄е┐еє╔╜╝и╗■┤╓}
 
-ележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыд╬╞╔д▀╣■д▀│л╗╧длдщ┴к┬Є╗шд╬╔╜╝ид▐д╟д╦╠є10╔├длдлдыд╬д╟бвд│д╬├╗╜╠дм╡сдсдщдьдыбе
+%ележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыд╬╞╔д▀╣■д▀│л╗╧длдщ┴к┬Є╗шд╬╔╜╝ид▐д╟д╦╠є10╔├длдлдыд╬д╟бвд│д╬├╗╜╠дм╡сдсдщдьдыбе
 
 
 
@@ -153,38 +152,37 @@ Ericдщ\cite{taskdriven}д╧бве╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 %\section{─є░╞е╖е╣е╞ерг▓}
 
 
-─є░╞е╖е╣е╞ер2д╟└ь╠ч▓╚длдщд╡дьд┐╗╪┼ждЄ╕╡д╦╜д└╡дкдшд╙▓■┴▒дЄ╣╘ддбв─є░╞е╖е╣е╞ер3дЄ║ю└од╖д┐бг
+%─є░╞е╖е╣е╞ер2д╟└ь╠ч▓╚длдщд╡дьд┐╗╪┼ждЄ╕╡д╦╜д└╡дкдшд╙▓■┴▒дЄ╣╘ддбв─є░╞е╖е╣е╞ер3дЄ║ю└од╖д┐бг
 
 
 
-\subsection{╝ъ╦б}
 
-д│д│д╟д╧╝чд╦бд─є░╞е╖е╣е╞ер2дм╩·дид╞ддд┐╠ф┬ъд╪д╬┬╨╜шд╦д─ддд╞╜╥д┘дыбе
+%д│д│д╟д╧╝чд╦бд─є░╞е╖е╣е╞ер2дм╩·дид╞ддд┐╠ф┬ъд╪д╬┬╨╜шд╦д─ддд╞╜╥д┘дыбе
 
-\subsubsection{д╔д│дмд╔д╬╚п╕└дЄ╔╜д╖д╞дддыдлдядлдщд╩дд}
-─є░╞е╖е╣е╞ерг▒д╟д╧бвд╔д╬╗■┤╓╝┤║┬╔╕дмд╔д╬╚п╕└дЄ╗╪д╖╝ид╣дл╠└╡нд╖д╞ддд╩длд├д┐бгд╜д╬╠ф┬ъдЄ▓Є╖шд╣дыд┐дсд╦бв─є░╞е╖е╣е╞ерг▓д╦дкддд╞д╧бве▐еже╣екб╝е╨б╝д╦дшд├д╞╚п╕└╞т═╞дм╔╜╝ид╡дьды╗┼┴╚д▀дЄ║юд├д┐беележеєе╗ещб╝длдщд╬╝┴╠фд╬╢ш╩мд▒дЄ╝ид╣│╞╜─╦└д╦д─ддд╞бдд╜дьд╛дьд╜д╬╛хдЄе▐еже╣екб╝е╨б╝д╣дыд┐д╙д╦бд└╤д▀╜┼д═└▐дь└■е░еще╒дЄ╔┴▓шд╣дыSVG╬╬░шд╬д╣д░╛хд╦бд│╞б╣д╜д╬╜─╦└дм╗╪д╖╝ид╣ележеєе╗ещб╝длдщд╬╝┴╠фд╦┬╨▒■д╣ды╚п╕└бддкдшд╙бдд╜д╬ележеєе╗ещб╝д╬╚п╕└длдщбд┤╡╝╘д╬╚п╕└д╚ележеєе╗ещб╝д╬╚п╕└дЄ┤▐дсд╞д╜дьд╛дь┴░╕х3╚п╕└д║д─дЄ╔┴▓шд╣дыдшджд╦е╫еэе░ещерд╖д┐бед─д▐дъбд┤╡╝╘д╬╚п╕└дм┴░╕х2╚п╕└д║д─бдележеєе╗ещб╝д╬╚п╕└дм3╚п╕└╔╜╝ид╡дьд╞дддыдшджд╦д╖д┐бе
-бе
-\subsubsection{едеєе┐ещепе╞еге╓└н}
-д▐д┐бд─є░╞е╖е╣е╞ер1д╦дкддд╞д╧едеєе┐ещепе╞еге╓└ндмд╩длд├д┐бе│╞├▒╕ьдЄ┤╡╝╘д╬╧├┬ъд╬╩м╠юд┤д╚д╦дяд▒дые┴езе├епе▄е├епе╣д╦д─ддд╞бд─є░╞е╖е╣е╞ер1д╟д╧д╜д╬╛ьд╟е┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бдг▒▓єг▒▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞ддд┐бе
+%\subsubsection{д╔д│дмд╔д╬╚п╕└дЄ╔╜д╖д╞дддыдлдядлдщд╩дд}
+%─є░╞е╖е╣е╞ерг▒д╟д╧бвд╔д╬╗■┤╓╝┤║┬╔╕дмд╔д╬╚п╕└дЄ╗╪д╖╝ид╣дл╠└╡нд╖д╞ддд╩длд├д┐бгд╜д╬╠ф┬ъдЄ▓Є╖шд╣дыд┐дсд╦бв─є░╞е╖е╣е╞ерг▓д╦дкддд╞д╧бве▐еже╣екб╝е╨б╝д╦дшд├д╞╚п╕└╞т═╞дм╔╜╝ид╡дьды╗┼┴╚д▀дЄ║юд├д┐беележеєе╗ещб╝длдщд╬╝┴╠фд╬╢ш╩мд▒дЄ╝ид╣│╞╜─╦└д╦д─ддд╞бдд╜дьд╛дьд╜д╬╛хдЄе▐еже╣екб╝е╨б╝д╣дыд┐д╙д╦бд└╤д▀╜┼д═└▐дь└■е░еще╒дЄ╔┴▓шд╣дыSVG╬╬░шд╬д╣д░╛хд╦бд│╞б╣д╜д╬╜─╦└дм╗╪д╖╝ид╣ележеєе╗ещб╝длдщд╬╝┴╠фд╦┬╨▒■д╣ды╚п╕└бддкдшд╙бдд╜д╬ележеєе╗ещб╝д╬╚п╕└длдщбд┤╡╝╘д╬╚п╕└д╚ележеєе╗ещб╝д╬╚п╕└дЄ┤▐дсд╞д╜дьд╛дь┴░╕х3╚п╕└д║д─дЄ╔┴▓шд╣дыдшджд╦е╫еэе░ещерд╖д┐бед─д▐дъбд┤╡╝╘д╬╚п╕└дм┴░╕х2╚п╕└д║д─бдележеєе╗ещб╝д╬╚п╕└дм3╚п╕└╔╜╝ид╡дьд╞дддыдшджд╦д╖д┐бе
 
-д╖длд╖─є░╞е╖е╣е╞ер2д╟д╧бде╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыдшджд╦▓■┴▒д╖д┐бед▐д┐бд┤╡╝╘д╬╧├┬ъд╬╩м╠юдЄ│╞├▒╕ьд┤д╚д╦╖шдс┬╟д┴д╖д┐дтд╬д└д▒д╟д╩дпбд╖шдс┬╟д┴д╖д╞ддд╩дддтд╬д╦┤╪д╖д╞дт┴к┬Є╗шдЄ╔╜╝ид╖┴к┬Єд╟дндыдшджд╦д╖д┐бе
+%\subsubsection{едеєе┐ещепе╞еге╓└н}
+%д▐д┐бд─є░╞е╖е╣е╞ер1д╦дкддд╞д╧едеєе┐ещепе╞еге╓└ндмд╩длд├д┐бе│╞├▒╕ьдЄ┤╡╝╘д╬╧├┬ъд╬╩м╠юд┤д╚д╦дяд▒дые┴езе├епе▄е├епе╣д╦д─ддд╞бд─є░╞е╖е╣е╞ер1д╟д╧д╜д╬╛ьд╟е┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бдг▒▓єг▒▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞ддд┐бе
 
-
-\subsubsection{б╓│лдлдьд┐╝┴╠фб╫бжб╓╩─д╕дщдьд┐╝┴╠фб╫бжб╓д╜д╬┬╛б╫}
-д╡дщд╦─є░╞е╖е╣е╞ерд╟д╧бдележеєе╗ещб╝длдщд╬│╞╝┴╠фд╦дкддд╞дтбд5W1Hб╓ддд─б╫б╓д╔д│д╟б╫б╓├пдмб╫б╓▓┐дЄб╫б╓д╔д╬дшджд╦б╫б╓д╔джд╖д┐б╫д╩д╔д╟╠фдядьдыдшджд╩б╓│лдлдьд┐╝┴╠фб╫д╩д╬длбдYes/Noд╟┼·дидщдьдыбддвдыддд╧░ь╕└д└д▒д╟┤╩├▒┼·дидщдьдыдшджд╩б╓╩─д╕дщдьд┐╝┴╠фб╫д╩д╬длбддвдыддд╧╠╡┬╠╧├бж┴ъд┼д┴д╩д╔бдд╔д┴дщд╦дт╩м╬рд╡дьд╩дддшджд╩б╓д╜д╬┬╛б╫д╩д╬длдЄбдецб╝е╢б╝дм╝ъ╞░д╟╜д└╡д╟дндыдшджд╦д╖д┐бе
-
-ележеєе╗ещб╝длдщд╬│╞╝┴╠фд╦дкддд╞бдд╜дьд╛дьб╓│лдлдьд┐╝┴╠фб╫бжб╓╩─д╕дщдьд┐╝┴╠фб╫бжб╓д╜д╬┬╛б╫д╬┴к┬Є╗шдм╔╜╝ид╡дьбд─є░╞е╖е╣е╞ер1д╟═╜┬мд╡дьд┐┴к┬Є╗шд╦двдщдлд╕дсе┴езе├епдм╞■д├д╞дддыдшдже╫еэе░ещерд╖д┐бед╜д╖д╞бд│╞├▒╕ьдЄ┤╡╝╘д╬╧├┬ъд╬╩м╠юд┤д╚д╦дяд▒дые┴езе├епе▄е├епе╣д╚╞▒══д╦бде╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыдшджд╦д╖д┐бе
+%д╖длд╖─є░╞е╖е╣е╞ер2д╟д╧бде╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыдшджд╦▓■┴▒д╖д┐бед▐д┐бд┤╡╝╘д╬╧├┬ъд╬╩м╠юдЄ│╞├▒╕ьд┤д╚д╦╖шдс┬╟д┴д╖д┐дтд╬д└д▒д╟д╩дпбд╖шдс┬╟д┴д╖д╞ддд╩дддтд╬д╦┤╪д╖д╞дт┴к┬Є╗шдЄ╔╜╝ид╖┴к┬Єд╟дндыдшджд╦д╖д┐бе
 
 
-\subsubsection{б╓д╜д╬┬╛б╫}
-б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбв┴ъд┼д┴дф└д┤╓╧├д╩д╔дЄ┤▐дрб╓д╜д╬┬╛б╫дЄ└▀д▒дыд┘днд╚╗╪┼жд╡дьд┐д╬д╟бв─є░╞е╖е╣е╞ерг▒д╬╗┼┴╚д▀д╦дкддд╞б╓│лдлдьд┐╝┴╠фб╫д╚╚╜─ъд╡дьд╩длд├д┐ележеєе╗ещб╝д╬╚п╕└д╬джд┴бв╜к╜ї╗ьб╓длб╫дЄ┤▐дрдтд╬дЄб╓╩─д╕дщдьд┐╝┴╠фб╫д╚д╖бвд╜дь░╩│░дЄб╓д╜д╬┬╛б╫д╚д╖д┐бг
+%\subsubsection{б╓│лдлдьд┐╝┴╠фб╫бжб╓╩─д╕дщдьд┐╝┴╠фб╫бжб╓д╜д╬┬╛б╫}
+%д╡дщд╦─є░╞е╖е╣е╞ерд╟д╧бдележеєе╗ещб╝длдщд╬│╞╝┴╠фд╦дкддд╞дтбд5W1Hб╓ддд─б╫б╓д╔д│д╟б╫б╓├пдмб╫б╓▓┐дЄб╫б╓д╔д╬дшджд╦б╫б╓д╔джд╖д┐б╫д╩д╔д╟╠фдядьдыдшджд╩б╓│лдлдьд┐╝┴╠фб╫д╩д╬длбдYes/Noд╟┼·дидщдьдыбддвдыддд╧░ь╕└д└д▒д╟┤╩├▒┼·дидщдьдыдшджд╩б╓╩─д╕дщдьд┐╝┴╠фб╫д╩д╬длбддвдыддд╧╠╡┬╠╧├бж┴ъд┼д┴д╩д╔бдд╔д┴дщд╦дт╩м╬рд╡дьд╩дддшджд╩б╓д╜д╬┬╛б╫д╩д╬длдЄбдецб╝е╢б╝дм╝ъ╞░д╟╜д└╡д╟дндыдшджд╦д╖д┐бе
 
-д▐д┐бв└╤д▀╜┼д═└▐дь└■е░еще╒╛хд╦дкддд╞бвб╓╩─д╕дщдьд┐╝┴╠фб╫дЄ╟╗дде░еьб╝┐зд╬╜─╦└д╟бвб╓д╜д╬┬╛б╫дЄ╟Ўдде░еьб╝┐зд╬╜─╦└д╟╔┴▓шд╖д┐бг
+%ележеєе╗ещб╝длдщд╬│╞╝┴╠фд╦дкддд╞бдд╜дьд╛дьб╓│лдлдьд┐╝┴╠фб╫бжб╓╩─д╕дщдьд┐╝┴╠фб╫бжб╓д╜д╬┬╛б╫д╬┴к┬Є╗шдм╔╜╝ид╡дьбд─є░╞е╖е╣е╞ер1д╟═╜┬мд╡дьд┐┴к┬Є╗шд╦двдщдлд╕дсе┴езе├епдм╞■д├д╞дддыдшдже╫еэе░ещерд╖д┐бед╜д╖д╞бд│╞├▒╕ьдЄ┤╡╝╘д╬╧├┬ъд╬╩м╠юд┤д╚д╦дяд▒дые┴езе├епе▄е├епе╣д╚╞▒══д╦бде╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыдшджд╦д╖д┐бе
 
 
-\subsubsection{еще╕еке▄е┐еє╔╜╝и╗■┤╓}
+%\subsubsection{б╓д╜д╬┬╛б╫}
+%б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбв┴ъд┼д┴дф└д┤╓╧├д╩д╔дЄ┤▐дрб╓д╜д╬┬╛б╫дЄ└▀д▒дыд┘днд╚╗╪┼жд╡дьд┐д╬д╟бв─є░╞е╖е╣е╞ерг▒д╬╗┼┴╚д▀д╦дкддд╞б╓│лдлдьд┐╝┴╠фб╫д╚╚╜─ъд╡дьд╩длд├д┐ележеєе╗ещб╝д╬╚п╕└д╬джд┴бв╜к╜ї╗ьб╓длб╫дЄ┤▐дрдтд╬дЄб╓╩─д╕дщдьд┐╝┴╠фб╫д╚д╖бвд╜дь░╩│░дЄб╓д╜д╬┬╛б╫д╚д╖д┐бг
 
-─є░╞е╖е╣е╞ер1д╦дкддд╞ележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыд╬╞╔д▀╣■д▀│л╗╧длдщ┴к┬Є╗шд╬╔╜╝ид▐д╟д╦╠є10╔├длдлд├д╞ддд┐д╬дЄбд─є░╞е╖е╣е╞ер2д╦дкддд╞д╧╔м═╫╗■┤╓╠є4╔├д╦д▐д╟═▐дид┐бе
+%д▐д┐бв└╤д▀╜┼д═└▐дь└■е░еще╒╛хд╦дкддд╞бвб╓╩─д╕дщдьд┐╝┴╠фб╫дЄ╟╗дде░еьб╝┐зд╬╜─╦└д╟бвб╓д╜д╬┬╛б╫дЄ╟Ўдде░еьб╝┐зд╬╜─╦└д╟╔┴▓шд╖д┐бг
+
+
+%\subsubsection{еще╕еке▄е┐еє╔╜╝и╗■┤╓}
+
+%─є░╞е╖е╣е╞ер1д╦дкддд╞ележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыд╬╞╔д▀╣■д▀│л╗╧длдщ┴к┬Є╗шд╬╔╜╝ид▐д╟д╦╠є10╔├длдлд├д╞ддд┐д╬дЄбд─є░╞е╖е╣е╞ер2д╦дкддд╞д╧╔м═╫╗■┤╓╠є4╔├д╦д▐д╟═▐дид┐бе
 
 
 
@@ -245,77 +243,116 @@ Ericдщ\cite{taskdriven}д╧бве╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 %бб─є░╞е╖е╣е╞ер2д╟ележеєе╗ещб╝длдщд╡дьд┐╗╪┼ждЄ╕╡д╦бв─є░╞е╖е╣е╞ер3дЄ║ю└од╖д┐бг
 
-%\subsection{╝ъ╦б}
 
 
 
 
-д│д│д╟д╧╝чд╦бд─є░╞е╖е╣е╞ер2дм╩·дид╞ддд┐╠ф┬ъд╪д╬┬╨╜шд╦д─ддд╞╜╥д┘дыбе
+
+%д│д│д╟д╧╝чд╦бд─є░╞е╖е╣е╞ер2дм╩·дид╞ддд┐╠ф┬ъд╪д╬┬╨╜шд╦д─ддд╞╜╥д┘дыбе
 
 бб
-\subsubsection{б╓▓Є╝сб╫бжб╓┴ъд┼д┴б╫бжб╓╠╡┬╠╧├б╫}
-─є░╞е╖е╣е╞ер2д╦дкддд╞бв┤╡╝╘д╬╚п╕└д╦д─ддд╞├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╖д╞ддд┐бг
-д╜д│длдщд╡дщд╦бв─є░╞е╖е╣е╞ер3д╦дкддд╞д╧бвележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓д╜д╬┬╛б╫дЄ└▀д▒бдд╡дщд╦б╓д╜д╬┬╛б╫дЄб╓▓Є╝сб╫б╓┴ъд┼д┴б╫б╓╠╡┬╠╧├б╫д╬3д─д╦╩м╬рд╖д┐бе
+%\subsubsection{б╓▓Є╝сб╫бжб╓┴ъд┼д┴б╫бжб╓╠╡┬╠╧├б╫}
+%─є░╞е╖е╣е╞ер2д╦дкддд╞бв┤╡╝╘д╬╚п╕└д╦д─ддд╞├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╖д╞ддд┐бг
+%д╜д│длдщд╡дщд╦бв─є░╞е╖е╣е╞ер3д╦дкддд╞д╧бвележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓д╜д╬┬╛б╫дЄ└▀д▒бдд╡дщд╦б╓д╜д╬┬╛б╫дЄб╓▓Є╝сб╫б╓┴ъд┼д┴б╫б╓╠╡┬╠╧├б╫д╬3д─д╦╩м╬рд╖д┐бе
 
 
 
 
 
-\subsubsection{д╜д╬┬╛д╬▓■┴▒┼└}
-\begin{itemize}
- \item ┤╡╝╘д╬╚п╕└д╦д─ддд╞бв├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╣дыдшджд╦д╖д┐бг
- \item д╜дтд╜дт┴к┬Є╗шдЄ╕║дщд╣д┘днд└д├д┐д╚дддж╠ф┬ъд╦┬╨д╖д╞д╧бд╩г┐Їд╬▓─╟╜└ндмдвдыдтд╬д╦д─ддд╞д╬д▀┴к┬Є╗шдЄ╔╜╝ид╣дыд│д╚д╟▓■┴▒дЄ┐▐д├д┐бе
- \item ележеєе╗ещб╝д╬г▒╚п╕└д╬╩м╬╠д╦▒■д╕д╞╜─╦└д╬┬└д╡дЄбвепещедеиеєе╚д╬г▒╚п╕└д╬╩м╬╠д╦▒■д╕д╞ележеєе╗ещб╝д╬╚п╕└дЄ╔╜╕╜д╣ды╜─╦└╞▒╗╬д╬┤╓│╓дЄ╩╤дид┐бгд│джд╣дыд│д╚д╦дшд├д╞бвд╔д╬╝┴╠фд╬двд╚д╦┤╡╝╘дмд┐дпд╡дєд╬▓ё╧├╬╠дЄ╚пд╖д┐длдмдядлдыдшджд╦д╩д├д┐бе
- \item ╕лдфд╣д╡д╬┤╤┼└длдщбвеще╕еке▄е┐еєд╦дшд├д╞╚п╕└д╬╩м╬рдЄ┴к┬Єд╣ды╔Ї╩мд╚бв╜─╦└дЄе▐еже╣екб╝е╨б╝д╖д┐║▌д╦╝┬║▌д╬╩╕дм╔╜╝ид╡дьды╔Ї╩мдЄбв└╤д▀╜┼д═└▐дь└■е░еще╒д╬▓╝┬жд╦бв▓гд╦╩┬д┘д╞╔╜╝ид╣дыдшджд╦д╖д┐бг
-\end{itemize}
+%\subsubsection{д╜д╬┬╛д╬▓■┴▒┼└}
+%\begin{itemize}
+% \item ┤╡╝╘д╬╚п╕└д╦д─ддд╞бв├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╣дыдшджд╦д╖д┐бг
+% \item д╜дтд╜дт┴к┬Є╗шдЄ╕║дщд╣д┘днд└д├д┐д╚дддж╠ф┬ъд╦┬╨д╖д╞д╧бд╩г┐Їд╬▓─╟╜└ндмдвдыдтд╬д╦д─ддд╞д╬д▀┴к┬Є╗шдЄ╔╜╝ид╣дыд│д╚д╟▓■┴▒дЄ┐▐д├д┐бе
+% \item ележеєе╗ещб╝д╬г▒╚п╕└д╬╩м╬╠д╦▒■д╕д╞╜─╦└д╬┬└д╡дЄбвепещедеиеєе╚д╬г▒╚п╕└д╬╩м╬╠д╦▒■д╕д╞ележеєе╗ещб╝д╬╚п╕└дЄ╔╜╕╜д╣ды╜─╦└╞▒╗╬д╬┤╓│╓дЄ╩╤дид┐бгд│джд╣дыд│д╚д╦дшд├д╞бвд╔д╬╝┴╠фд╬двд╚д╦┤╡╝╘дмд┐дпд╡дєд╬▓ё╧├╬╠дЄ╚пд╖д┐длдмдядлдыдшджд╦д╩д├д┐бе
+% \item ╕лдфд╣д╡д╬┤╤┼└длдщбвеще╕еке▄е┐еєд╦дшд├д╞╚п╕└д╬╩м╬рдЄ┴к┬Єд╣ды╔Ї╩мд╚бв╜─╦└дЄе▐еже╣екб╝е╨б╝д╖д┐║▌д╦╝┬║▌д╬╩╕дм╔╜╝ид╡дьды╔Ї╩мдЄбв└╤д▀╜┼д═└▐дь└■е░еще╒д╬▓╝┬жд╦бв▓гд╦╩┬д┘д╞╔╜╝ид╣дыдшджд╦д╖д┐бг
+%\end{itemize}
 
 
 
 %\subsection{╖ы▓╠}
 
-─є░╞е╖е╣е╞ер3дЄележеєе╗ещб╝1╠╛д╦╗╚д├д╞ддд┐д└днбв░╩▓╝д╬е│есеєе╚дЄддд┐д└ддд┐бг
-\begin{itemize}
- \item б╓╝┴╠ф╖┴╝░дм▓Є╝сбв╠╡┬╠╧├ д╬г▓╝я╬рд╖длд╩ддд┐дсбв┼м└┌д╩╩м╬рдмд╟днд▐д╗дєд╟д╖д┐бг
+%─є░╞е╖е╣е╞ер3дЄележеєе╗ещб╝1╠╛д╦╗╚д├д╞ддд┐д└днбв░╩▓╝д╬е│есеєе╚дЄддд┐д└ддд┐бг
+%\begin{itemize}
+% \item б╓╝┴╠ф╖┴╝░дм▓Є╝сбв╠╡┬╠╧├ д╬г▓╝я╬рд╖длд╩ддд┐дсбв┼м└┌д╩╩м╬рдмд╟днд▐д╗дєд╟д╖д┐бг
  
-╩─д╕дщдьд┐╝┴╠фд╧бв╦▄═ше╗еще╘е╣е╚┬жд╬▓Є╝сдЄ│╬╟зд╣дыд┐дсд╬╝┴╠фд╟д╣бгд╖дл
-д╖бв╝┴╠ф╖┴д╚д╖д╞д╧│лдлдьд┐╝┴╠фд╚┬╨дЄд╩д╖д╞ддд▐д╣д╬д╟бвд│дьд╧д│дьд╟дкддд╞
-дкднбв╝┴╠ф╖┴╝░д╟д╧д╩дд▓Є╝сдЄб╓▓Є╝сб╫д╦╩м╬рд╣дыд╬дм┬┼┼Ўд╚╣═дид▐д╣бгдшд├д╞бв
-╩м╬рд╧бвб╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫б╓▓Є╝сб╫б╓┴ъд┼д┴б╫б╓└д┤╓╧├б╫д╦
-╩мд▒д╞ддд┐д└дпд╚ддддд╟д╣д═бгб╫
-\end{itemize}
+%╩─д╕дщдьд┐╝┴╠фд╧бв╦▄═ше╗еще╘е╣е╚┬жд╬▓Є╝сдЄ│╬╟зд╣дыд┐дсд╬╝┴╠фд╟д╣бгд╖дл
+%д╖бв╝┴╠ф╖┴д╚д╖д╞д╧│лдлдьд┐╝┴╠фд╚┬╨дЄд╩д╖д╞ддд▐д╣д╬д╟бвд│дьд╧д│дьд╟дкддд╞
+%дкднбв╝┴╠ф╖┴╝░д╟д╧д╩дд▓Є╝сдЄб╓▓Є╝сб╫д╦╩м╬рд╣дыд╬дм┬┼┼Ўд╚╣═дид▐д╣бгдшд├д╞бв
+%╩м╬рд╧бвб╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫б╓▓Є╝сб╫б╓┴ъд┼д┴б╫б╓└д┤╓╧├б╫д╦
+%╩мд▒д╞ддд┐д└дпд╚ддддд╟д╣д═бгб╫
+%\end{itemize}
 бб
 
 %\subsection{▓▌┬ъ}
 
 
 
-\section{ележеєе╗ещб╝длдщд╬е╒егб╝е╔е╨е├еп}
+\section{ележеєе╗ещб╝длдщд╬е╒егб╝е╔е╨е├епдкдшд╙═╫╖я├ъ╜╨}
 
 %бб╚п╧├╬╠д╬└▐дь└■е░еще╒д╬┐з╩мд▒д╦д─ддд╞д╧бдд╜д╬┐═д╬┤╪┐┤дм╕■ддд╞ддды╧├┬ъд╦дшд├д╞╩мд▒дщдьдыд╬д╟бд╩м╬р╩¤╦бд╬╣й╔╫дм╔м═╫д└д╚╣═дидщдьдыбе
 %ббд▐д┐╝┬║▌д╦д╧бд╧├д╖д╞ддды├цд╟┤╪┐┤дмд╔дєд╔дє╚Їдєд╟дддп┐═дм┬┐ддд┐дсбдд╔джд╖д╞дддпдл
 %ббддд║дьд╦д╖д╞дтбде╗еще╘е╣е╚д╬╚п╧├д╦д─ддд╞д╧бд╜╜╩мд╚дщдидщдьдыд╚╗╫ддд▐д╣бе╝┴╠ф╖┴╝░б╩│лдлдьд┐бд╩─д╕дщдьд┐б╦д╚▓Є╝сд╚бд┴ъ─╚бжд╜д╬┬╛д╚╠╡┬╠╧├д╦╩мд▒дыбе╠╡┬╠╧├д╚┴ъ─╚д╧╞▒еье┘еыд╟д╧д╩дпбдележеєе╗еъеєе░д╦╔м═╫длд╔дждлд╬╜┼д▀дм░уджд╬д╟бд╩мд▒д┐╩¤дмдшддд╚╣═дидщдьдыбе
 
 
-\subsection{┴┤д╞д╬┴к┬Є╗шдЄ╜ч╚╓д╦╔╜╝и}
-┴к┬Є╗шдЄд╣д┘д╞╔╜╝ид╖д╞д█д╖дд
-епещедеиеєе╚д╬╚п╕└д╦┤╪д╣дыеще╕еке▄е┐еєд╚ележеєе╗ещб╝д╬╚п╕└д╦┤╪д╣дыеще╕еке▄е┐еєдЄдяд▒д╞╔╜╝ид╖д╞ддд┐дмбвд│дьдЄ╝┬║▌д╬▓ё╧├╜чд╦─╛д╖д╞╔╜╝ид╖д╞д█д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бг
+%\subsection{┴┤д╞д╬┴к┬Є╗шдЄ╜ч╚╓д╦╔╜╝и}
+%┴к┬Є╗шдЄд╣д┘д╞╔╜╝ид╖д╞д█д╖дд
+%епещедеиеєе╚д╬╚п╕└д╦┤╪д╣дыеще╕еке▄е┐еєд╚ележеєе╗ещб╝д╬╚п╕└д╦┤╪д╣дыеще╕еке▄е┐еєдЄдяд▒д╞╔╜╝ид╖д╞ддд┐дмбвд│дьдЄ╝┬║▌д╬▓ё╧├╜чд╦─╛д╖д╞╔╜╝ид╖д╞д█д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бг
 
 
-\subsection{е╒ейеєе╚е╡еде║д╬╕■╛х}
-е╒ейеєе╚е╡еде║║╟╛од╬╔Ї╩мдм┬┐дпдк╟пдЄдсд╖д┐╩¤д╦д╧╞╔дсд╩ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐1╩╕1╩╕дЄ└▐дъд┐д┐дрд│д╚д╟е╒ейеєе╚е╡еде║╕■╛хд╡д╗ды
+%\subsection{е╒ейеєе╚е╡еде║д╬╕■╛х}
+%е╒ейеєе╚е╡еде║║╟╛од╬╔Ї╩мдм┬┐дпдк╟пдЄдсд╖д┐╩¤д╦д╧╞╔дсд╩ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐1╩╕1╩╕дЄ└▐дъд┐д┐дрд│д╚д╟е╒ейеєе╚е╡еде║╕■╛хд╡д╗ды
 
-\subsection{┐з║╠д╬▓■┴▒}
-е╒ейеєе╚е╡еде║║╟╛од╬╔Ї╩мдм┬┐дпдк╟пдЄдсд╖д┐╩¤д╦д╧╞╔дсд╩ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐1╩╕1╩╕дЄ└▐дъд┐д┐дрд│д╚д╟е╒ейеєе╚е╡еде║╕■╛хд╡д╗ды
+%\subsection{┐з║╠д╬▓■┴▒}
+%е╒ейеєе╚е╡еде║║╟╛од╬╔Ї╩мдм┬┐дпдк╟пдЄдсд╖д┐╩¤д╦д╧╞╔дсд╩ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐1╩╕1╩╕дЄ└▐дъд┐д┐дрд│д╚д╟е╒ейеєе╚е╡еде║╕■╛хд╡д╗ды
 
-\subsection{╟█├╓}
-
-
-\subsection{╩╕д╬╢ш└┌дь╠▄}
-╬удид╨б╓д█дєд╚д╦бв─лдт├ыдт╕л─едщдьд╞д╩ддд├д╞ддд├д┐дщ╩╤д╩╕└дд╩¤д╟д╣д▒д╔бв┐йд┘д┐
-ддд╚днд╦┐йд┘дьды╛ї╢╖д├д╞ддджд╬дмд╣д┤дп╡╫д╖д╓дъд╟бвд╩дєдл╝л╩мд╟дтд╔джд╩дє
-длд╩д├д╞ддджд╬дмдвд├д┐дєд╟д╣д▒д╔бв░╒│░д╚╔с─╠д╦д╟днд┐д▀д┐ддд╩б╩╛╨б╦д╜дьд╧
-бвдвдъд▐д╣д═бжбжбжд╩дєдл▓╚┬▓дмддд┐дщ┐йд┘д╩дндуддд▒д╩длд├д┐дъд╚длд╣дыд╖б╫д╚дддж╩╕д╦┬╨д╖д╞бвб╓бжбжбжб╫дшдъ┴░д╬╔Ї╩мд╧б╓▓╚┬▓б╫б╓╕Є═зб╫б╓╗┼╗Ўб╫д╬д╔д╬╩м╬рд╦дт┬░д╡д║бвб╓бжбжбжб╫дшдъ╕хд╬╔Ї╩мд╧б╓▓╚┬▓б╫д╦┬░д╣дыдмбве╫еэе╚е┐еде╫е╨б╝е╕ечеєд╦дкддд╞д╧б╓бжбжбжб╫дЄб╓бгб╫д╬дшджд╩1╩╕1╩╕д╬╢ш└┌дь╠▄д╦└▀─ъд╖д╞д╩ддд╬д╟бв╢ш╩╠д╖д┐╚╜─ъ╩╤╣╣дм─є░╞е╖е╣е╞ерецб╝е╢б╝┬жд╟д╟днд╩ддбг
-
-б╓бжбжбжб╫дЄ
+%\subsection{╟█├╓}
 
 
+%\subsection{╩╕д╬╢ш└┌дь╠▄}
+%╬удид╨б╓д█дєд╚д╦бв─лдт├ыдт╕л─едщдьд╞д╩ддд├д╞ддд├д┐дщ╩╤д╩╕└дд╩¤д╟д╣д▒д╔бв┐йд┘д┐
+%ддд╚днд╦┐йд┘дьды╛ї╢╖д├д╞ддджд╬дмд╣д┤дп╡╫д╖д╓дъд╟бвд╩дєдл╝л╩мд╟дтд╔джд╩дє
+%длд╩д├д╞ддджд╬дмдвд├д┐дєд╟д╣д▒д╔бв░╒│░д╚╔с─╠д╦д╟днд┐д▀д┐ддд╩б╩╛╨б╦д╜дьд╧
+%бвдвдъд▐д╣д═бжбжбжд╩дєдл▓╚┬▓дмддд┐дщ┐йд┘д╩дндуддд▒д╩длд├д┐дъд╚длд╣дыд╖б╫д╚дддж╩╕д╦┬╨д╖д╞бвб╓бжбжбжб╫дшдъ┴░д╬╔Ї╩мд╧б╓▓╚┬▓б╫б╓╕Є═зб╫б╓╗┼╗Ўб╫д╬д╔д╬╩м╬рд╦дт┬░д╡д║бвб╓бжбжбжб╫дшдъ╕хд╬╔Ї╩мд╧б╓▓╚┬▓б╫д╦┬░д╣дыдмбве╫еэе╚е┐еде╫е╨б╝е╕ечеєд╦дкддд╞д╧б╓бжбжбжб╫дЄб╓бгб╫д╬дшджд╩1╩╕1╩╕д╬╢ш└┌дь╠▄д╦└▀─ъд╖д╞д╩ддд╬д╟бв╢ш╩╠д╖д┐╚╜─ъ╩╤╣╣дм─є░╞е╖е╣е╞ерецб╝е╢б╝┬жд╟д╟днд╩ддбг
+
+%б╓бжбжбжб╫дЄ
+
+
+\section{╜─╦└дЄе▐еже╣екб╝е╨б╝д╣дыд│д╚д╟╝■╩╒д╬╚п╕└дЄ╔╜╝и}
+\begin{itemize}
+\item д╔д│дмд╔д╬╚п╕└дЄ╔╜д╖д╞дддыдлдядлдщд╩дд
+\item еще╕еке▄е┐еєдм┬┐д╣дод╞е░еще╒дм▓╝д╬╩¤д╦дддп
+\end{itemize}
+д╚дддж╠ф┬ъд╦┬╨д╖д╞д╧бвележеєе╗ещб╝длдщ┤╡╝╘д╪д╬╝┴╠фдЄ╝ид╣╜─╦└дЄе▐еже╣екб╝е╨б╝д╣дыд│д╚д╦дшд├д╞бв╝■╩╒д╬╚п╕└дЄ╔╜╝ид╣ды╡б╟╜дЄ─╔▓├д╣дыд│д╚д╟▓Є╖шдЄ┐▐д├д┐бг
+ббббббеще╕еке▄е┐еєд╚д▐д╚дсд╞бве░еще╒дшдъ▓╝┬жд╦
+бббббб╩╕╛╧╔╜╝ид╡дьдыдшджд╦еьедевеже╚╩╤╣╣
+
+
+\section{едеєе┐ещепе╞еге╓└н}
+едеєе┐ещепе╞еге╓└ндмд╩ддбв└╤д▀╜┼д═└▐дь└■е░еще╒дм╔┴▓шд╡дьд┐╕хд╦еще╕еке▄е┐еєдЄ╩╤дид╞дтедеєе┐ещепе╞еге╓д╦└╤д▀╜┼д═└▐дь└■е░еще╒дм╩╤╣╣д╡дьд╩ддд╚дддж╠ф┬ъд╦┬╨д╖д╞бв╔┴▓ш╕хд╦еще╕еке▄е┐еєдЄ╩╤дидыд╚┬и╗■д╦е░еще╒╔┴▓шд╦╩╤╣╣┼м═╤д╡дьдыдшджд╦▓■╬╔дЄ╣╘д├д┐бг
+
+\section{еще╕еке▄е┐еє╔╜╝ид▐д╟д╬╔м═╫╗■┤╓}
+еэб╝елеыд╟д╬╞░║юд╦дкддд╞бвеще╕еке▄е┐еє╔╜╝ид╦╠є10╔├╔м═╫д╟двдъбвд╜д╬╖╨▓с╗■┤╓дм╠ф┬ъ╗ыд╡дьд╞ддд┐бгд╜дьдЄ╝їд▒бв║г▓єд╧е╫еэе░ещер╛хд╬╠╡┬╠д╩╡н╜╥дЄ╛╩дпд│д╚д╟╠є5╔├д╦├╗╜╠д╖д┐бг
+
+\section{епещедеиеєе╚д╬╚п╕└д╬╩м╬р├▒░╠}
+┤╡╝╘д╬╚п╕└д╦д─ддд╞├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╣дыдшджд╦╩╤╣╣д╖д┐бг
+
+\section{ележеєе╗ещб╝д╬╚п╕└д╬╩м╬р├▒░╠}
+ележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞бвб╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбвб╓▓Є╝сб╫б╓┴ъд┼д┴б╫б╓└д┤╓╧├б╫д╚дддж╩м╬рдЄ─╔▓├д╖д╞д█д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐д╬д╟бв─╔▓├дЄ╣╘д├д┐бг
+
+д│д│д╟бв└╤д▀╜┼д═└▐дь└■е░еще╒д╬╜щ┤№╔┴▓шд╬║▌д╬╩м╬р╣╘─°д╦д─ддд╞└т╠└д╣дыбгд│д╬╣╘─°д╦д─ддд╞┤╩├▒д╦└т╠└д╖д┐┐▐дЄбв┐▐5.1д╦╝ид╣бгд▐д║б╓ддд─б╫б╓д╔д│б╫б╓▓┐б╫д╩д╔д╬дддядцды5W1HдЄ╝ид╣╡┐╠ф╗ьдЄдтд─╚п╕└дЄб╓│лдлдьд┐╝┴╠фб╫д╦╩м╬рд╣дыбг╝бд╦╗─дъд╬╚п╕└д╬джд┴бв├▒╕ь┐Їдмг╡╕─░╩▓╝д╬дтд╬дЄб╓┴ъд┼д┴б╫д╦╩м╬рд╣дыбгд╡дщд╦╗─дъд╬╚п╕└д╬джд┴╜к╜ї╗ьб╓длб╫дЄ┤▐др╚п╕└дЄб╓╩─д╕дщдьд┐╝┴╠фб╫д╦╩м╬рд╣дыбг║гд▐д╟д╬г│д─д╦╩м╬рд╡дьд╩длд├д┐дтд╬д╧б╓▓Є╝сб╫длб╓└д┤╓╧├б╫д╦╩м╬рд╡дьдыдяд▒д└дмбв╜к╜ї╗ьд╬б╓д═б╫дЄ┤▐дрдтд╬дЄб╓▓Є╝сб╫бв┤▐д▐д╩дддтд╬дЄб╓└д┤╓╧├б╫д╚д╖д┐бг
+
+\section{╩м╬╠д╦▒■д╕д┐╜─╦└д╬┬└д╡дф┤╓│╓}
+
+╩м╬╠д╦▒■д╕д╞╜─╦└д╬┬└д╡дф┤╓│╓дЄ╩╤дидыд│д╚дЄ─є░╞д╖д┐бг
+
+
+\section{╩╕╗·┐зд╬▓■┴▒}
+╩╕╗·┐зд╬▓■┴▒дм╡сдсдщдьд╞ддд┐дмбв╩╕╗·┐з╣їдд╩╕╗·дЄ┐зд╬д─ддд┐╦╧д─дндлд├д│б┌б█д╟░╧дждшджд╦д╖д┐бг
+
+\section{╝┤д╬╔╜╝и}
+└╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞бв╝┤дЄ╔╜╝ид╣дыдшджд╦д╖д┐бг
+
+╩╕╗·дм╛од╡ддвк╩╤╣╣
+
+\section{╝┤д╬╔╜╝и}
+е╫еэе╚е┐еде╫д╟д╧бв┤╡╝╘д╬╚п╕└д╦┤╪д╣ды┴к┬Є╗шдмд╣д┘д╞╔╜╝ид╡дьд┐╕хд╦ележеєе╗ещб╝д╦┤╪д╣ды╚п╕└дм╔╜╝ид╡дьдыдшджд╦д╩д├д╞ддд┐бгд╖длд╖д╜дьд╟д╧дядлдъд┼дщддд╚ддджеье╙ехб╝дЄдтд╚д╦бв╕╡д╬е╞ене╣е╚е╟б╝е┐─╠дъд╬╜ч╚╓д╦╩┬д╓дшджд╦╩╤╣╣д╖д┐бг
