--- a/main.bib
+++ b/main.bib
@@ -121,8 +121,8 @@
 
 
 
-@article{2014web,
-  title={Web カウンセリングシステムの開発および心理データの可視化},
-  author={庄,?亮 and others},
-  year={2014}
-}
+%@article{2014web,
+%  title={Web カウンセリングシステムの開発および心理データの可視化},
+%  author={庄,?亮 and others},
+%  year={2014}
+%}
