--- a/main.tex
+++ b/main.tex
@@ -35,6 +35,8 @@
 \chapter{結論と今後の課題}
 \input{chapter8.tex}
 
+\acknowledgements{\input{acknowledgements.tex}}
+
 \bibliographystyle{kueethesis} % まず，文献目録を掲載する tex ファイルを開き、プリアンブルに使用したい BibTeX のスタイルファイル(bstファイル)を指定します
 \bibliography{main}
 
