--- a/chapter6.tex
+++ b/chapter6.tex
@@ -1,6 +1,6 @@
 本章では、前章で述べた提案システムに対する、カウンセラーの評価について述べる。
 
-本システム自体に関しては「。この研究が進んでいくことによって、心理臨
+本システム自体に関しては「この研究が進んでいくことによって、心理臨
 床におけるスーパーヴィジョンにおいて、客観性にもとづく指導が可能になって
 いけることを願っております。こういう着想はありませんでしたので、大変期待
 しているところです。」
@@ -15,3 +15,9 @@
 すので、この点については、ぜひとも改善していただかないと実用できないので
 はないでしょうか。」
 とコメントをいただいている。
+
+アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して、次に記す通りのレビューを得た。「クライエントの発話の分類ですが、自身の症状についての記述は、愛・交友・
+仕事のどれにも当てはまらないことが多く、第４のタスクとされるself task自
+己、第５のタスクとされるsupiritual taskスピリチュアルの二つを追加してい
+ただく方がいいかもしれません。症状に囚われている患者は、自己の課題が大半
+になるといえます。」
