--- a/chapter4.tex
+++ b/chapter4.tex
@@ -317,7 +317,7 @@ Ericдщ\cite{taskdriven}д╧бве╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 \begin{itemize}
 \item епещедеиеєе╚длдщд╬╩╓┼·д└д▒д╟д╩дпбвележеєе╗ещб╝д╬╝┴╠ф╢ш╩мд▒дт╝ъ╞░д╟╜д└╡д╖д┐ддбе
 \item ╕╢╩╕длдщбде╗еще╘е╣е╚длдщ┤╡╝╘д╪д╬╝┴╠ф╗Ў╣рд╬╩м╬рд╬╗╪╔╕д╚д╖д╞бд┤╡╝╘д╬╚п╕└дЄджд╩дмд╖д╞┤╡╝╘╝л┐╚дт╡дд┼ддд╞ддд╩длд├д┐д│д╚дЄ╟з├╬д╡д╗дыд╬дм┬ч╗Ўд╟двдыд╬д╟бдд╜дьд╛дьд╬╚п╕└╬╠д╬▓─╗ы▓╜д╬╝┬┴їдЄ└╣дъ╣■дрд┘днд╟двдыд╚╣═дидщдьдыбе
-\item едеєе┐ещепе╞еге╓└ндмд╩ддбе╕╜╛їд╟д╧д╜д╬╛ьд╟е┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бд1▓є1▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞дддыбее╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╖д╞д█д╖ддбе
+\item 
 \end{itemize}
 
 
@@ -336,31 +336,31 @@ Ericдщ\cite{taskdriven}д╧бве╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 \subsection{едеєе┐ещепе╞еге╓└н}
-едеєе┐ещепе╞еге╓└ндмд╩ддбв└╤д▀╜┼д═└▐дь└■е░еще╒дм╔┴▓шд╡дьд┐╕хд╦еще╕еке▄е┐еєдЄ╩╤дид╞дтедеєе┐ещепе╞еге╓д╦└╤д▀╜┼д═└▐дь└■е░еще╒дм╩╤╣╣д╡дьд╩ддд╚дддж╠ф┬ъд╦┬╨д╖д╞бв╔┴▓ш╕хд╦еще╕еке▄е┐еєдЄ╩╤дидыд╚┬и╗■д╦е░еще╒╔┴▓шд╦╩╤╣╣┼м═╤д╡дьдыдшджд╦▓■╬╔дЄ╣╘д├д┐бг
+едеєе┐ещепе╞еге╓└ндмд╩ддбе╕╜╛їд╟д╧д╜д╬╛ьд╟е┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бд1▓є1▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞дддыбее╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╖д╞д█д╖ддбе
 
 \subsection{еще╕еке▄е┐еє╔╜╝ид▐д╟д╬╔м═╫╗■┤╓}
-еэб╝елеыд╟д╬╞░║юд╦дкддд╞бвеще╕еке▄е┐еє╔╜╝ид╦╠є10╔├╔м═╫д╟двдъбвд╜д╬╖╨▓с╗■┤╓дм╠ф┬ъ╗ыд╡дьд╞ддд┐бгд╜дьдЄ╝їд▒бв║г▓єд╧е╫еэе░ещер╛хд╬╠╡┬╠д╩╡н╜╥дЄ╛╩дпд│д╚д╟╠є5╔├д╦├╗╜╠д╖д┐бг
+еэб╝елеыд╟д╬╞░║юд╦дкддд╞бвеще╕еке▄е┐еє╔╜╝ид╦╠є10╔├╔м═╫д╟двдъбвд╜д╬╖╨▓с╗■┤╓дм╠ф┬ъ╗ыд╡дьд╞ддд┐бг
 
 \subsection{епещедеиеєе╚д╬╚п╕└д╬╩м╬р├▒░╠}
-┤╡╝╘д╬╚п╕└д╦д─ддд╞├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╣дыдшджд╦╩╤╣╣д╖д┐бг
+┤╡╝╘д╬╚п╕└д╦д─ддд╞├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╣дыдшджд╦╩╤╣╣д╖д╞д█д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бг
 
 \subsection{ележеєе╗ещб╝д╬╚п╕└д╬╩м╬р├▒░╠}
-ележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞бвб╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбвб╓▓Є╝сб╫б╓┴ъд┼д┴б╫б╓└д┤╓╧├б╫д╚дддж╩м╬рдЄ─╔▓├д╖д╞д█д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐д╬д╟бв─╔▓├дЄ╣╘д├д┐бг
+ележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞бвб╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбвб╓▓Є╝сб╫б╓┴ъд┼д┴б╫б╓└д┤╓╧├б╫д╚дддж╩м╬рдЄ─╔▓├д╖д╞д█д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бг
 
-д│д│д╟бв└╤д▀╜┼д═└▐дь└■е░еще╒д╬╜щ┤№╔┴▓шд╬║▌д╬╩м╬р╣╘─°д╦д─ддд╞└т╠└д╣дыбгд│д╬╣╘─°д╦д─ддд╞┤╩├▒д╦└т╠└д╖д┐┐▐дЄбв┐▐5.1д╦╝ид╣бгд▐д║б╓ддд─б╫б╓д╔д│б╫б╓▓┐б╫д╩д╔д╬дддядцды5W1HдЄ╝ид╣╡┐╠ф╗ьдЄдтд─╚п╕└дЄб╓│лдлдьд┐╝┴╠фб╫д╦╩м╬рд╣дыбг╝бд╦╗─дъд╬╚п╕└д╬джд┴бв├▒╕ь┐Їдмг╡╕─░╩▓╝д╬дтд╬дЄб╓┴ъд┼д┴б╫д╦╩м╬рд╣дыбгд╡дщд╦╗─дъд╬╚п╕└д╬джд┴╜к╜ї╗ьб╓длб╫дЄ┤▐др╚п╕└дЄб╓╩─д╕дщдьд┐╝┴╠фб╫д╦╩м╬рд╣дыбг║гд▐д╟д╬г│д─д╦╩м╬рд╡дьд╩длд├д┐дтд╬д╧б╓▓Є╝сб╫длб╓└д┤╓╧├б╫д╦╩м╬рд╡дьдыдяд▒д└дмбв╜к╜ї╗ьд╬б╓д═б╫дЄ┤▐дрдтд╬дЄб╓▓Є╝сб╫бв┤▐д▐д╩дддтд╬дЄб╓└д┤╓╧├б╫д╚д╖д┐бг
 
 \subsection{╩м╬╠д╦▒■д╕д┐╜─╦└д╬┬└д╡дф┤╓│╓}
 
-╩м╬╠д╦▒■д╕д╞╜─╦└д╬┬└д╡дф┤╓│╓дЄ╩╤дидыд│д╚дЄ─є░╞д╖д┐бг
+╩м╬╠д╦▒■д╕д╞╜─╦└д╬┬└д╡дф┤╓│╓дЄ╩╤дидыд│д╚дЄ─є░╞д╖д┐д╚д│дэ═▀д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бг
 
 
 \subsection{╩╕╗·┐зд╬▓■┴▒}
-╩╕╗·┐зд╬▓■┴▒дм╡сдсдщдьд╞ддд┐дмбв╩╕╗·┐з╣їдд╩╕╗·дЄ┐зд╬д─ддд┐╦╧д─дндлд├д│б┌б█д╟░╧дждшджд╦д╖д┐бг
+╩╕╗·┐зд╬▓■┴▒дм╡сдсдщдьд┐бг
 
 \subsection{╝┤д╬╔╜╝и}
-└╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞бв╝┤дЄ╔╜╝ид╣дыдшджд╦д╖д┐бг
+└╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞бв╝┤дЄ╔╜╝ид╣дыдшджд╦╡сдсдщдьд┐бг
 
-╩╕╗·дм╛од╡ддвк╩╤╣╣
+\subsection{╩╕╗·дм╛од╡дд}
+╩╕╗·дм╛од╡ддбг
 
 \subsection{╝┤д╬╔╜╝и}
-е╫еэе╚е┐еде╫д╟д╧бв┤╡╝╘д╬╚п╕└д╦┤╪д╣ды┴к┬Є╗шдмд╣д┘д╞╔╜╝ид╡дьд┐╕хд╦ележеєе╗ещб╝д╦┤╪д╣ды╚п╕└дм╔╜╝ид╡дьдыдшджд╦д╩д├д╞ддд┐бгд╖длд╖д╜дьд╟д╧дядлдъд┼дщддд╚ддджеье╙ехб╝дЄдтд╚д╦бв╕╡д╬е╞ене╣е╚е╟б╝е┐─╠дъд╬╜ч╚╓д╦╩┬д╓дшджд╦╩╤╣╣д╖д┐бг
+е╫еэе╚е┐еде╫д╟д╧бв┤╡╝╘д╬╚п╕└д╦┤╪д╣ды┴к┬Є╗шдмд╣д┘д╞╔╜╝ид╡дьд┐╕хд╦ележеєе╗ещб╝д╦┤╪д╣ды╚п╕└дм╔╜╝ид╡дьдыдшджд╦д╩д├д╞ддд┐бгд╖длд╖д╜дьд╟д╧дядлдъд┼дщддд╚ддджеье╙ехб╝дЄддд┐д└дддвбг
